@@ -6939,3 +6939,20 @@ Error in array(1, integer()) : 'dims' cannot be of length 0
 Error in array(1, integer(), list(1, 2)) : 'dims' cannot be of length 0
 > ##
 > 
+> 
+> ## is.na() on an empty dataframe (PR#14059)
+> DF <- data.frame(row.names=1:3)
+> is.na(DF); str(.Last.value)
+
+1
+2
+3
+ logi[1:3, 0 ] 
+ - attr(*, "dimnames")=List of 2
+  ..$ : chr [1:3] "1" "2" "3"
+  ..$ : NULL
+> is.na(DF[FALSE, ]); str(.Last.value)
+<0 x 0 matrix>
+ logi[0 , 0 ] 
+> ## first failed in R 2.15.1, second gave NULL
+> 
